fix: 🐛 cards spacing

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -36,7 +36,7 @@ html {
 }
 
 body {
-  @apply max-w-[1440px] p-8 m-8 2xl:mx-auto;
+  @apply max-w-screen-xl p-10 m-10 2xl:mx-auto;
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
